fix z-index

--- a/themes/bs_report_theme/public/css/main.css
+++ b/themes/bs_report_theme/public/css/main.css
@@ -840,6 +840,6 @@ form button {
     width: 100%;
     height: 100%;
     background: RGBA(24, 30, 35, 0.9);
-    z-index: 1900; }
+    z-index: 1999; }
   .bs-modal-open {
     visibility: visible; }
