--- a/themes/bs_report_theme/sass/modal.scss
+++ b/themes/bs_report_theme/sass/modal.scss
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     background:RGBA(24, 30, 35, 0.9);
-     z-index: 1900;
+    z-index: 1999;
   }
 
   &-open {
